# WBoard-Collab

./: .gitignore  CMakeLists.txt  README.md  test_collaboration.cpp
.codegraph/: daemon.pid
WBoard/Resources/: WBoard.qrc
WBoard/Source/adaptors/: WBCFFAdaptor.cpp  WBCFFSubsetAdaptor.cpp  WBExportDocument.cpp  WBExportFullPDF.cpp  WBExportPDF.cpp  WBImportCFF.cpp  WBImportDocumentSetAdaptor.cpp  WBImportPDF.cpp  WBMetadataDcSubsetAdaptor.cpp  WBSvgSubsetAdaptor.cpp  WBSvgSubsetAdaptor.h
WBoard/Source/api/: WBLibraryAPI.h  WBW3CWidgetAPI.cpp
WBoard/Source/board/: WBBoardController.cpp  WBBoardPaletteManager.cpp  WBBoardPaletteManager.h  WBBoardView.cpp  WBFeaturesController.cpp
WBoard/Source/collaboration/: WBCollaborationClient.cpp  WBCollaborationClient.h  WBCollaborationDiscovery.cpp  WBCollaborationDiscovery.h  WBCollaborationManager.cpp  WBCollaborationManager.h  WBCollaborationMessage.h  WBCollaborationPalette.cpp  WBCollaborationPalette.h  WBSignalingServer.cpp  WBSignalingServer.h
WBoard/Source/core/: WBApplication.cpp  WBApplication.h  WBApplicationController.cpp  WBDisplayManager.cpp  WBDisplayManager.h  WBDocumentManager.cpp  WBDownloadManager.cpp  WBForeignObjectsHandler.cpp  WBPersistenceManager.cpp  WBPreferencesController.cpp  WBPreferencesController.h  WBSettings.cpp  main.cpp
WBoard/Source/customWidgets/: WBGraphicsItemAction.cpp  WBMediaWidget.cpp  WBMediaWidget.h
WBoard/Source/desktop/: WBCustomCaptureWindow.cpp  WBDesktopAnnotationController.cpp  WBDesktopAnnotationController.h  WBDesktopPalette.cpp  WBWindowCapture_stub.cpp
WBoard/Source/document/: WBDocumentController.cpp  WBDocumentController.h  WBDocumentProxy.cpp
WBoard/Source/domain/: WBDragableThumbnail.cpp  WBGraphicsDelegateFrame.cpp  WBGraphicsItemDelegate.cpp  WBGraphicsItemDelegate.h  WBGraphicsItemUndoCommand.cpp  WBGraphicsMediaItem.cpp  WBGraphicsMediaItem.h  WBGraphicsMediaItemDelegate.cpp  WBGraphicsMediaItemDelegate.h  WBGraphicsScene.cpp  WBGraphicsScene.h  WBGraphicsSvgItem.h  WBGraphicsTextItem.cpp  WBGraphicsTextItem.h  WBGraphicsWidgetItem.cpp  WBGraphicsWidgetItem.h  WBItem.h  WBSelectionFrame.cpp
WBoard/Source/frameworks/: WBPlatformUtils_linux.cpp  WBPlatformUtils_win.cpp  WBStringUtils.cpp  WBStubs_linux.cpp  WBVersion.cpp
WBoard/Source/gui/: WBActionPalette.cpp  WBClockPalette_stub.cpp  WBDockPalette.cpp  WBDockPalette.h  WBDocumentTreeWidget.cpp  WBDownloadWidget.cpp  WBFeaturesActionBar.cpp  WBFeaturesWidget.cpp  WBFeaturesWidget.h  WBFloatingPalette.cpp  WBKeyboardPalette.cpp  WBKeyboardPalette.h  WBMagnifer.cpp  WBMainWindow.h  WBMessageWindow.cpp  WBMousePressFilter.cpp  WBPageNavigationWidget.cpp  WBRubberBand.cpp  WBScreenMirror.cpp  WBStartupHintsPalette.cpp  WBStylusPalette.cpp  WBThumbnailWidget.cpp  WBThumbnailWidget.h  WBToolWidget.cpp  WBWidgetMirror.cpp
WBoard/Source/network/: UBCookieJar.cpp  UBCookieJar.h  UBHttpFileDownloader.cpp  UBServerXMLHttpRequest.cpp  WBAutoSaver.cpp  WBAutoSaver.h  WBNetworkAccessManager.cpp
WBoard/Source/pdf/: PDFRenderer.cpp  UBWebPluginPDFWidget.h
WBoard/Source/pdf-merger/: Object.cpp
WBoard/Source/podcast/: WBPodcastController.cpp  WBPodcastController.h  WBPodcastController_stub.cpp  WBPodcastRecordingPalette.cpp
WBoard/Source/podcast/windowsmedia/: WBWaveRecorder.cpp  WBWaveRecorder.h
WBoard/Source/qtsingleapplication/: qtlocalpeer.cpp  qtlockedfile_unix.cpp
WBoard/Source/tools/: WBAbstractDrawRuler.cpp  WBGraphicsCompass.cpp  WBGraphicsCompass.h  WBGraphicsProtractor.cpp  WBGraphicsProtractor.h  WBGraphicsRuler.cpp  WBGraphicsRuler.h  WBGraphicsTriangle.cpp  WBGraphicsTriangle.h
WBoard/Source/web/: WBOEmbedParser.cpp  WBWebController.cpp  WBWebController.h  WBWebController_stub.cpp  WBWebKitUtils.h
WBoard/Source/web/browser/: WBBrowserWindow.cpp  WBBrowserWindow.h  WBChaseWidget.cpp  WBDownloadManager_.cpp  WBDownloadManager_.h  WBEditTableView.cpp  WBHistory.cpp  WBHistory.h  WBModelMenu.cpp  WBSearchLineEdit.cpp  WBSqueezeLabel.cpp  WBTabWidget.cpp  WBTabWidget.h  WBToolBarSearch.cpp  WBUrlLineEdit.cpp  WBUrlLineEdit.h  WBWebTrapWebView.cpp  WBWebTrapWebView.h  WBWebView.cpp  WBWebView.h
